--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -25,7 +25,7 @@ jobs:
 
 
   -name:  New commits found
-      if: steps.sync.outputs.has_new_commits == 'true'
+      if: ${{ steps.sync.outputs.has_new_commits == 'true' }}
       run: echo "New commits were found to sync."
 
     # - name: Notify if new commits
