--- a/.github/workflows/difference.yml
+++ b/.github/workflows/difference.yml
@@ -3,7 +3,7 @@ name: Check new upstream commits
 on:
   schedule:
     #  - cron: '0 7 * * 1,4,6'
-    #  - cron: '10,20,30,40,50,57 * * * *'
+     - cron: '10,20,30,40,50,57 * * * *'
      #scheduled for 07:00 on monday and thursday.
 
 jobs:
