disable workflow cron

--- a/.github/workflows/pull_upstream.yml
+++ b/.github/workflows/pull_upstream.yml
@@ -2,7 +2,7 @@ name: Pull upstream
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0,30 * * * *'
+    # - cron:  '0,30 * * * *'
 jobs:
   release_pull_request:
     runs-on: ubuntu-latest
